# terminal

./: Cargo.toml
src/: document.rs  editor.rs  row.rs
test/: fichier.txt  test2.txt  test3.txt
